# DimMat

./: DimMat.cabal  DimMat.hs  README.md  sources.txt  syncdocs.sh
DimMat/: Internal.hs  QQ.hs
examples/: controlspace.hs  qq.hs
