name:                DimMat
version:             0.1.0.0
synopsis:            matrices with statically checked units
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Doug McClean, Adam Vogt
maintainer:          vogt.adam@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC==7.6.2

library
  exposed-modules:     DimMat, DimMat.QQ, DimMat.Internal
  build-depends:       base >=4.6 && <4.9,
                       units >= 1.1,
                       hmatrix-syntax >=0.1 && <0.2,
                       template-haskell >=2.8 && <3,
                       numtype-tf >=0.1 && <0.2,
                       -- ad >=3.4 && <3.5,
                       hmatrix >=0.15 && <0.16,
                       ansi-wl-pprint,
                       HList >= 0.3
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell,
                       FlexibleContexts,
                       TypeOperators,
                       UndecidableInstances,
                       DataKinds,
                       PolyKinds,
                       KindSignatures,
                       TypeFamilies,
                       RankNTypes
