name:                DimMat
version:             0.1.0.0
synopsis:            matrices with compile-time checked units and sizes
description:         a wrapper of HMatrix/LAPACK which attaches units
                     to the transformations
license:             BSD3
license-file:        LICENSE
author:              Doug McClean, Adam Vogt
maintainer:          vogt.adam@gmail.com
copyright:           Doug McClean, Adam Vogt
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC==7.8

library
  exposed-modules:     DimMat
                       DimMat.QQ
                       DimMat.Internal

  default-language:    Haskell2010

  -- pretty much everything
  default-extensions:   
                        ConstraintKinds
                        CPP
                        DataKinds
                        ExplicitNamespaces
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        KindSignatures
                        MultiParamTypeClasses
                        OverlappingInstances
                        PolyKinds
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        TemplateHaskell
                        TypeFamilies
                        TypeOperators
                        UndecidableInstances
                        FunctionalDependencies

  if (impl(ghc >= 7.7))
    default-extensions: AllowAmbiguousTypes
  build-depends:       base >=4.6 && <4.9,
                       dimensional >= 0.13,
                       template-haskell >=2.8 && <3,
                       numtype,
                       tagged,
                       hmatrix >=0.16 && <0.17,
                       ansi-wl-pprint,
                       hmatrix-syntax,
                       HList >= 0.3
  default-language:    Haskell2010


  if flag(with_ad)
    build-depends:     ad >=4 && <5
    cpp-options:       -DWITH_AD

flag with_ad
  default: False
  description: enable automatic differentiation
